--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "json-api-project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,8 +22,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "mongoose": "^5.7.11",
+    "mongoose": "^5.7.12",
     "nodemon": "^2.0.1",
     "prettier": "^1.19.1"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "description": ""
 }
